@@ -1,0 +1,4 @@
+#!/usr/local/bin/ruby
+require 'rubygems'
+require_gem 'switchtower'
+load 'switchtower'
