@@ -1,5 +1,7 @@
 *SVN*
 
+* Add integration with SwitchTower (rake tasks, default deploy.rb recipe)
+
 * Allow ERb in the database.yml file (just like with fixtures), so you can pull out the database configuration in environment variables #1822 [Duane Johnson]
 
 * Added convenience controls for FCGI processes (especially when managed remotely): spinner, spawner, and reaper. They reside in script/process. More details can be had by calling them with -h/--help.
